# zeus

./: .env.example  .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/zeus/: __init__.py  cli.py  config.py  core.py  templates.py  utils.py
tests/: test_core.py
