[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zeus-builder"
version = "0.1.0"
description = "Build full-stack apps from natural language descriptions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Officethree Technologies"}]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[project.scripts]
zeus = "zeus.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
